@@ -1,3 +1,8 @@
+2004-01-29  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>
+
+	* src/style.cpp (sp_style_read_pfloat, SPS_READ_IFLOAT_IF_UNSET, 
+	SPS_READ_PFLOAT_IF_UNSET): Remove these unused functions/macros.
+
 2004-01-28  MenTaLguY  <mental@rydia.net>
 
 	* src/toolbox.cpp: aux toolbar now expands properly when torn off
